# jel

./: CMakeLists.txt  README.md  doxygen_config  input  json_encode.c  json_encode.h
include/: jel_encode.h  jel_results.h  jel_tlv.h  json_encode.h
src/: CMakeLists.txt  jel_encode.c  jel_tlv.c  json_encode.c
test/gtest/: CMakeLists.txt  jel_encode.cc  jel_tlv.cc  json_encode.cc
test/sample/: CMakeLists.txt  main.c
